Fix WorkflowExecutor Java conditional/type compilation errors